--- a/media/css/style.css
+++ b/media/css/style.css
@@ -66,7 +66,8 @@ h1, h2 {
   font-size: 1.4em; }
 
 time {
-  font-family: "Ubuntu", monospace; }
+  /* font-family: "Ubuntu", monospace; */ 
+  }
 
 header {
   width: 800px;
