--- a/media/css/style.css
+++ b/media/css/style.css
@@ -19,7 +19,8 @@ body {
   font-size: 14px;
   font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   color: #555;
-  background-color: #f9f9f9; }
+  /*background-color: #f9f9f9;*/ 
+  }
 
 ol, ul {
   list-style-position: inside; }
