--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,17 +11,20 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link href="/atom.xml" rel="alternate" title="{{ site.name }}" type="application/atom+xml" />
     <link rel="stylesheet" href="/media/css/style.css">
+	<link rel="stylesheet" href="/media/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/media/css/pygments.min.css">
 	<!--
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/github.min.css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
-	-->
-	<link rel="stylesheet" href="/media/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/media/css/github.min.css">
     <script type="text/javascript" src="/media/js/retina.min.js"></script>
+	
+	//if want to switch to highlight.js to highlight code,enable blow js,by charles
     <script src="/media/js/highlight.min.js"></script>
     <script type="text/javascript"> hljs.initHighlightingOnLoad(); </script>
+	-->
   </head>
   <body>
       <div id="main" role="main">
