--- a/media/css/style.css
+++ b/media/css/style.css
@@ -207,3 +207,24 @@ footer {
     color: #dd1144; }
   .like-wrapper .like-button.liked:hover {
     color: #999; }
+
+	
+table.charlesTable {
+   border: 1px solid #d8d8d8;
+   border-collapse: collapse;
+   margin-top: 10px;
+   width: 100%;
+}
+table.charlesTable th {
+   background-color: #f5f5f5;
+   border: 1px solid #d8d8d8;
+   padding: 5px 5px 5px 5px;
+   text-align: left;
+   vertical-align: baseline;
+}
+table.charlesTable td {
+   background-color: #fff;
+   border: 1px solid #d8d8d8;
+   padding: 5px 5px 5px 5px;
+   vertical-align: text-top;
+}
