--- a/media/css/style.css
+++ b/media/css/style.css
@@ -121,7 +121,7 @@ ul.listing {
     ul.listing li.listing-seperator {
       font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
       ul.listing li.listing-seperator:before {
-        content: "⭠ ";
+        content: "۞ ";
         color: #ccc; }
 
 article {
