--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <footer>
           <div>
             {% assign first_post = site.posts | last %}
-            &copy; {{ first_post.date | date: "%Y" }} ~ {{ site.time | date: "%Y" }} {{ site.author }} | powered by jekyll
+            <i class="fa fa-copyright fa-1"></i> {{ first_post.date | date: "%Y" }} ~ {{ site.time | date: "%Y" }} {{ site.author }} | powered by jekyll
           </div>
         </footer>
       </div> <!-- main -->
