--- a/media/css/style.css
+++ b/media/css/style.css
@@ -121,8 +121,9 @@ ul.listing {
     ul.listing li.listing-seperator {
       font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
       ul.listing li.listing-seperator:before {
-        content: "۞ ";
-        color: #ccc; }
+        content: "✿ ";
+        /*color: #ccc;*/ 
+		}
 
 article {
   margin: 2em 0; }
