--- a/media/css/style.css
+++ b/media/css/style.css
@@ -63,7 +63,8 @@ code {
   background-color: #f8f8f8;
   padding: 2px 5px;
   border: 1px dashed #e0e0e0;
-  font-family: "Ubuntu", monospace; }
+  font-family: "Microsoft YaHei", sans-serif;
+  }
 
 h1, h2 {
   font-size: 1.4em; }
