--- a/media/css/pygments.css
+++ b/media/css/pygments.css
@@ -8,16 +8,16 @@
 .c1 { color: #969896} /* Comment.Single */
 .cs { color: #969896} /* Comment.Special */
 .gd { color: #A00000 } /* Generic.Deleted */
-.ge {} /* Generic.Emph */
+.ge {color: #000000} /* Generic.Emph */
 .gr { color: #FF0000 } /* Generic.Error */
 .gh { color: #000080} /* Generic.Heading */
 .gi { color: #00A000 } /* Generic.Inserted */
 .go { color: #888888 } /* Generic.Output */
 .gp { color: #000080} /* Generic.Prompt */
-.gs {} /* Generic.Strong */
+.gs {color: #000000} /* Generic.Strong */
 .gu { color: #800080} /* Generic.Subheading */
 .gt { color: #0044DD } /* Generic.Traceback */
-.kc {} /* Keyword.Constant */
+.kc {color: #000000} /* Keyword.Constant */
 .kd { color: #a71d5d} /* Keyword.Declaration */
 .kn { color: #a71d5d} /* Keyword.Namespace */
 .kp { color: #a71d5d } /* Keyword.Pseudo */
@@ -26,7 +26,7 @@
 .m { color: #0086b3 } /* Literal.Number */
 .s { color: #df5000 } /* Literal.String */
 .n { color: #000000} /* common text */
-.na {} /* Name.Attribute */
+.na { color: #000000} /* Name.Attribute */
 .nb { color: #a71d5d } /* Name.Builtin */
 .nc { color: #795da3} /* Name.Class */
 .no { color: #880000 } /* Name.Constant */
