--- a/media/css/style.css
+++ b/media/css/style.css
@@ -64,6 +64,7 @@ code {
   padding: 2px 5px;
   border: 1px dashed #e0e0e0;
   font-family: "Microsoft YaHei", sans-serif;
+  color: #D06700;
   }
 
 h1, h2 {
