修改shell的样式

--- a/media/css/pygments.css
+++ b/media/css/pygments.css
@@ -61,3 +61,4 @@
 .vg { color: #19177C } /* Name.Variable.Global */
 .vi { color: #19177C } /* Name.Variable.Instance */
 .il { color: #0086b3 } /* Literal.Number.Integer.Long */
+.language-sh { color: #000000} /*shell script*/
