--- a/media/css/style.css
+++ b/media/css/style.css
@@ -10,19 +10,16 @@
  * |\.|._)._)
  * --------------------------------- */
 @import url(/media/fonts/telex-regular.css);
-/*
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:300);
-*/
 * {
   margin: 0;
   padding: 0; }
 
 body {
   font-size: 14px;
-  font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif;
   color: #555;
-  /*background-color: #f9f9f9;*/ 
-  }
+  background-color: #f9f9f9; }
 
 ol, ul {
   list-style-position: inside; }
@@ -63,16 +60,13 @@ code {
   background-color: #f8f8f8;
   padding: 2px 5px;
   border: 1px dashed #e0e0e0;
-  font-family: "Microsoft YaHei", sans-serif;
-  color: #D06700;
-  }
+  font-family: Ubuntu, monospace; }
 
 h1, h2 {
   font-size: 1.4em; }
 
 time {
-  /* font-family: "Ubuntu", monospace; */ 
-  }
+  font-family: Ubuntu, monospace; }
 
 header {
   width: 800px;
@@ -88,7 +82,7 @@ header {
     position: relative;
     top: 1em; }
     header #header h1 {
-      font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
+      font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif; }
       header #header h1 a {
         color: #a9a9a9;
         display: block; }
@@ -99,7 +93,7 @@ header {
     header nav span {
       margin: .5em; }
     header nav a, header nav #header h1 a, header #header h1 nav a, header nav article .title a, article .title header nav a, header nav article .meta .tags a, article .meta .tags header nav a, header nav article .divider a, article .divider header nav a {
-      font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+      font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif;
       color: #ccc; }
 
 #content {
@@ -112,7 +106,7 @@ header {
 ul.listing {
   margin-top: 1em; }
   ul.listing li {
-    /*list-style-type: none;*/
+    list-style-type: none;
     padding: 0; }
     ul.listing li.listing-item a, ul.listing li.listing-item header #header h1 a, header #header h1 ul.listing li.listing-item a {
       padding: .2em 0 .2em 2em; }
@@ -121,11 +115,10 @@ ul.listing {
     ul.listing li.listing-item:hover {
       background-color: #f9f9f9; }
     ul.listing li.listing-seperator {
-      font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
+      font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif; }
       ul.listing li.listing-seperator:before {
-        content: "✿ ";
-        /*color: #ccc;*/ 
-		}
+        content: "⭠ ";
+        color: #ccc; }
 
 article {
   margin: 2em 0; }
@@ -135,7 +128,7 @@ article {
     padding-top: 20px;
   };
   article .title {
-    font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
+    font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif; }
     article .title header #header h1 a, header #header h1 article .title a, article .title a, article .title .meta .tags a, article .meta .tags .title a {
       color: #777; }
   article .meta {
@@ -158,7 +151,7 @@ article {
       margin: 0 2em;
       color: #e9e9e9; }
     article .divider header #header h1 a, header #header h1 article .divider a, article .divider .meta .tags a, article .meta .tags .divider a, article .divider a {
-      font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+      font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif;
       margin: 0 2em; }
       article .divider header #header h1 a i, header #header h1 article .divider a i, article .divider .meta .tags a i, article .meta .tags .divider a i, article .divider a i {
         color: #999999;
@@ -190,7 +183,7 @@ footer {
   margin: 0 auto;
   display: block;
   color: #909090;
-  font-family: "telexregular", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif;
   font-size: .9em;
   text-align: center;
   margin: 1em auto; }
@@ -216,23 +209,4 @@ footer {
   .like-wrapper .like-button.liked:hover {
     color: #999; }
 
-	
-table.charlesTable {
-   border: 1px solid #d8d8d8;
-   border-collapse: collapse;
-   margin-top: 10px;
-   width: 100%;
-}
-table.charlesTable th {
-   background-color: #f5f5f5;
-   border: 1px solid #d8d8d8;
-   padding: 5px 5px 5px 5px;
-   text-align: left;
-   vertical-align: baseline;
-}
-table.charlesTable td {
-   background-color: #fff;
-   border: 1px solid #d8d8d8;
-   padding: 5px 5px 5px 5px;
-   vertical-align: text-top;
-}
+/*# sourceMappingURL=style.css.map */
