--- a/media/css/style.css
+++ b/media/css/style.css
@@ -124,9 +124,8 @@ article {
   margin: 2em 0; }
   article p {
     padding: .7em 0; }
-  article h1,h2,h3,h4{
-    padding-top: 20px;
-  };
+  article h1, article h2, article h3, article h4 {
+    padding-top: 20px; }
   article .title {
     font-family: telexregular, Hiragino Sans GB, Microsoft YaHei, sans-serif; }
     article .title header #header h1 a, header #header h1 article .title a, article .title a, article .title .meta .tags a, article .meta .tags .title a {
