--- a/media/css/style.scss
+++ b/media/css/style.scss
@@ -84,6 +84,7 @@ ul.listing {
 article {
   margin: 2em 0;
   p { padding: .7em 0; }
+  h1,h2,h3,h4 { padding-top: 20px; }
   .title {
     font-family: #{$label-font};
     a { @extend a; color: #777; }
